--- a/Tareas/css/stylecatalogo.css
+++ b/Tareas/css/stylecatalogo.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;500;700&display=swap');
-
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 h1 { font-family: Futura, "Trebuchet MS", Arial, sans-serif; font-size: 50px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 57.45px; } h3 { font-family: Futura, "Trebuchet MS", Arial, sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; } p { font-family: Futura, "Trebuchet MS", Arial, sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } blockquote { font-family: Futura, "Trebuchet MS", Arial, sans-serif; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; } pre { font-family: Futura, "Trebuchet MS", Arial, sans-serif; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px; }
 
 :root{
@@ -25,6 +25,16 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+}
+
+.filastart{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 50px;
 }
 .navbar{
     width: 100%;
@@ -65,8 +75,74 @@ body{
     border-radius: 50px;
     color: #042CBB;
     transition:0.3s;
+    padding-top: 10px;
 }
 .botoncomprar:hover{
     background-color: var(--interactive);
     color: white;
 }
+.grafico{
+    width: 30%;
+    padding: 50px
+}
+.videocurso{
+    width: 33%;
+    padding: 50px;
+}
+.descripcion{
+    width: 23%;
+}
+img{
+    border-radius: 10px;
+    width: 500px;;
+}
+
+.calificacion{
+    margin-right: 100px;
+    font-weight: lighter;
+}
+
+
+
+fieldset, label { margin: 0px; padding-left: 0px; }
+
+
+/****** Style Star Rating Widget *****/
+
+.rating { 
+  border: none;
+  float: left;
+}
+
+.rating > input { display: none; } 
+.rating > label:before { 
+  margin: 5px;
+  font-size: 1.25em;
+  font-family: FontAwesome;
+  display: inline-block;
+  content: "\f005";
+}
+
+.rating > .half:before { 
+  content: "\f089";
+  position: absolute;
+}
+
+.rating > label { 
+  color: #ddd; 
+ float: right; 
+}
+
+/***** CSS Magic to Highlight Stars on Hover *****/
+
+.rating > input:checked ~ label, /* show gold star when clicked */
+.rating:not(:checked) > label:hover, /* hover current star */
+.rating:not(:checked) > label:hover ~ label { color: #042CBB;  } /* hover previous stars in list */
+
+.rating > input:checked + label:hover, /* hover current star when changing rating */
+.rating > input:checked ~ label:hover,
+.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+.rating > input:checked ~ label:hover ~ label { color: #587af3;  } 
+
+/*DONUT*/
+
