--- a/Tareas/css/stylecatalogo.css
+++ b/Tareas/css/stylecatalogo.css
@@ -63,6 +63,12 @@ body{
     padding: 50px;
     margin-right: 30%;
 }
+
+.precio{
+    font-size: 40px;
+    font-weight: bold;
+    margin-right: 20px;
+}
 .botoncomprar{
     font-size: 18px;
     font-weight: lighter;
@@ -82,8 +88,10 @@ body{
     color: white;
 }
 .grafico{
+    text-align: center;
     width: 30%;
-    padding: 50px
+    padding: 50px;
+    
 }
 .videocurso{
     width: 33%;
@@ -97,11 +105,35 @@ img{
     width: 500px;;
 }
 
+.imggrafico{
+    width: 300px;
+}
+
 .calificacion{
     margin-right: 100px;
     font-weight: lighter;
 }
 
+.picture{
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 50%;
+    margin-right: 90px;
+}
+.profilepic{
+    width: 200px;
+    
+}
+.datosbasicos{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    height: 100px;
+    align-items: center;
+    font-size: 24px;
+    font-weight: lighter;
+    justify-content: flex-end;
+}
 
 
 fieldset, label { margin: 0px; padding-left: 0px; }
