--- a/Tareas/css/styleportafolio.css
+++ b/Tareas/css/styleportafolio.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('http://fonts.cdnfonts.com/css/gidole');
 :root{
     --xiketic: #1c0f13ff;
@@ -6,209 +7,138 @@
     --opal: #b7ceceff;
     --platinum: #e2e2e2ff;
     --hover: rgb(163, 14, 14);
-    --background: https://static.vecteezy.com/system/resources/previews/002/104/953/non_2x/smoke-on-a-black-background-free-photo.jpg;
+    --parrafos: rgb(55, 160, 55);
 }
-/*ESTILO PARA LINKS*/
-a:hover {color: var(--hover)}
-
-a{
-    text-decoration: none;
-    color: #B7CECE;
-}
-
-body{
-    background-color: var(--xiketic);
-    font-family: 'Gidole', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    padding: 0;
-    margin: 0;
-    color: var(--opal);
-}
-section{
-    padding: 15px;
-    margin: 15px;
-}
-
-/*ESTILO DEL HEADER*/
-header{
-    display: flex;
-    width: 1108px;
-    height: 200px;
-    background: #B7CECE;
-    border-radius: 45px;
-    left: -44px;
-    top: 67px;
-    position: absolute;
+div{
     text-align: center;
+    justify-content: center;
+    align-items: center;
+    
 }
-.perfil{
-    position: absolute;
-    width: 145.82px;
-    height: 237.07px;
-    left: 1300px;
-    top: -20px;
-    border: 3px solid #B7CECE;
-    border-radius: 197px;
+body{
+    font-family: 'Gidole';
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--xiketic);
+    
+}
+.presentacion{
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgb(28, 15, 19,1)), url(/Tareas/imgs/background.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    padding-bottom: 20px;
+}
+.fila{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 
-.portafolio{
-    position: absolute;
-    width: 565px;
-    height: 72px;
-    left: 279px;
-    top: 0px;
-    
-    font-weight: 275;
-    font-size: 40px;
-    line-height: 72px;
-    
-    color: #034C3C;
+h1{
+    font-family: 'Bebas Neue', cursive;
+    font-size: 70px;
+    background: linear-gradient(50deg, rgb(71, 235, 71),#034c3cff);
+    text-transform: uppercase;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.fotoprincipal{
+    width: 220px;
+    height: 400px;
+    border-radius: 50px;
+    filter: drop-shadow(5px 10px 9px rgba(0, 0, 0, 0.514));
 }
 
 .nombre{
-    position: absolute;
-    width: 511px;
-    height: 72px;
-    left: 303px;
-    top: 60px;
-    font-weight: 300;
-    font-size: 48px;
-    line-height: 72px;
-    color: #034C3C;
+    font-size: 80px;
+}
+p{
+    font-size: 24px;
+    color: var(--blue-green-color-wheel);
+}
+.cargo{
+    font-size: 18px;
+    color: var(--parrafos);
 }
 
-/*ITEMS*/
-.taller{
-    
-    position: absolute;
-    width: 400px;
-    height: 417px;
-    left: 104px;
-    top: 366px;
-    border: 2px solid #B7CECE;
-    box-sizing: border-box;
-    border-radius: 50px;
+a{
+    text-decoration: none;
+    color: var(--parrafos);
 }
 
-.consulta{
-    
-    position: absolute;
-    width: 400px;
-    height: 417px;
-    left: 570px;
-    top: 366px;
+a:hover{
+    color: palegreen;
+}
 
-    border: 2px solid #B7CECE;
-    box-sizing: border-box;
-    border-radius: 50px;
+ul{
+    font-size: 32px;
+    color: var(--parrafos);
+    list-style: none;
+    text-align: center;
+    padding-right: 32px;
+}
+.talleres{
+    padding-top: 40px;
+    background-color: var(--xiketic);
+}
+
+.consultas{
+    background: linear-gradient(#1c0f13ff,rgb(24, 32, 20));
 }
 .retos{
-    position: absolute;
-    width: 400px;
-    height: 417px;
-    left: 1034px;
-    top: 366px;
-    border: 2px solid #B7CECE;
-    box-sizing: border-box;
-    border-radius: 50px;
+    background-color: rgb(24, 32, 20);
+    padding-bottom: 70px;
 }
 
-/*ESTILO PARA LAS LISTAS*/
-
-ul
-{
-    font-size: 32px;
-    line-height: 54px;
-    color: #B7CECE;
-}
-
-.tituloreto{
-    position: absolute;
-    width: 127px;
-    height: 50.04px;
-    left: 140px;
-    top: 0px;
-
-    font-style: normal;
-    font-size: 48px;
-}
-
-.ulreto{
-    position: absolute;
-    width: 300px;
-    height: 168.88px;
-    left:110px;
-    top: 100px;
-    font-style: normal;
-    font-weight: 250;
-}
-
-
-.tituloconsulta{
-    position: absolute;
-    width: 127px;
-    height: 50.04px;
-    left: 110px;
-    top: 0px;
-
-    font-style: normal;
-    font-size: 48px;
-}
-.ulconsulta{
-    position: absolute;
-    width: 153px;
-    height: 168.88px;
-    left:80px;
-    top: 100px;
-}
-li{
-    width: 500px;
-}
-
-.titulotaller{
-    position: absolute;
-    width: 127px;
-    height: 50.04px;
-    left: 120px;
-    top: 0px;
-    font-size: 48px;
-}
-
-.ultaller{
-    position: absolute;
-    width: 300px;
-    height: 168.88px;
-    left:50px;
-    top: 100px;
-}
-
-
-/*FOOTER*/
 footer{
-    position: absolute;
-    width: 100%;
-    height: 170px;
-    left: 0px;
-    top: 854px;
-
-    background: #034C3C;
+    height: 100%;
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 30px;
 }
 
 .logogit{
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    left: 1300px;
-    top: 32px;
+    width: 50px;
+}
+.logofigma{
+    width: 30px;
+}
+
+.logoneo{
+    width: 50px;
 }
 
 .copyright{
-    color: #B7CECE;
-    font-size: 20px;
-    position: absolute;
-    top: 130px;
-    left: 15px;
+    padding: 50px;
+}
+
+.logos{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: row;
+    display: flex;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.logo{
+    padding-top: 20px;
 }
 
 
