--- a/Tareas/css/stylesnack.css
+++ b/Tareas/css/stylesnack.css
@@ -23,7 +23,7 @@ p{
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding-bottom:200px;
+    padding-bottom:100px;
 }
 
 .fila{
@@ -64,6 +64,10 @@ a{
     border: solid var(--interactive) 1px;
 }
 
+.imagen{
+    margin: 50px;
+}
+
 .imagen img{
     width: 350px;
 }
@@ -74,7 +78,7 @@ a{
 
 .textogrande{
     font-weight: 900;
-    font-size: 38px;
+    font-size: 3em;
     color: white;
 }
 .snack{
@@ -100,10 +104,11 @@ h1{
 }
 
 .titulo{
-    padding-top: 80px;
+    margin-left: 30px;
 }
 
 .container_conferencistas{
+    margin-top: 0;
     background-color: black;
 }
 
@@ -168,7 +173,8 @@ h1{
 }
 
 .card .description{
-    background: white;
+    background: black;
+    border: solid var(--interactive) 1px;
     margin-top: -10px;
     padding: 20px;
     border-radius: 0px 0px 20px 20px;
@@ -207,4 +213,19 @@ h1{
 .botonleermas:hover{
     background-color: var(--interactive);
     color: white;
+}
+
+.nombreperfiles{
+    color: #6C63FF;
+}
+
+.descripcionperfiles{
+    color: white;
+}
+
+@media screen and (max-device-width:600px){
+    .textogrande{
+        font-size: 24px;
+    }
+    
 }
