--- a/Tareas/css/stylesopadeletras.css
+++ b/Tareas/css/stylesopadeletras.css
@@ -62,9 +62,14 @@ span:hover{
     color: var(--platinum);
 }
 
+span:focus{
+    background-color: var(--hover);
+}
+
 
 
 section span{
+    cursor: pointer;
     background-color: rgb(154, 172, 172);
     padding: 15px;
     margin: 3px;
